Fixed Social Link icons alignment

--- a/assets/css/teamstyle.css
+++ b/assets/css/teamstyle.css
@@ -135,6 +135,12 @@ body{
    }
 }
 
+.social-links a{
+padding-top: 7px;
+}
+
+
+
 
 
 
